--- a/version-actual/website/css/contact.css
+++ b/version-actual/website/css/contact.css
@@ -101,6 +101,7 @@
     margin: 0;
     color: #1a1a1a;
     border: none;
+    border-radius: 10px;
     min-width: 9.375rem;
     padding: 0 1.5rem;
     background-color: var(--primary);
