--- a/version-actual/website/css/pricing.css
+++ b/version-actual/website/css/pricing.css
@@ -204,7 +204,7 @@
     margin: 0;
     color: #fff;
     padding: 0 2rem;
-    border-radius: 3.125rem;
+    border-radius: 10px;
     background-color: var(--primary);
     overflow: hidden;
     display: inline-block;
