--- a/version-actual/website/css/whyUsSection.css
+++ b/version-actual/website/css/whyUsSection.css
@@ -125,7 +125,7 @@
     margin: 0;
     color: #fff;
     padding: 0 3rem;
-    border-radius: 1.875rem;
+    border-radius: 10px;
     background-color: var(--primary);
     display: inline-block;
     position: relative;
