--- a/version-actual/css/timetable.css
+++ b/version-actual/css/timetable.css
@@ -7,7 +7,7 @@ body {
   background-position: center;
 }
 
-.navbar {
+.navbar{
   background-color: var(--primaryLight) !important;
 }
 
@@ -44,7 +44,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 5px;
   color: #fff;
   font-weight: bold;
   text-align: center;
@@ -64,7 +63,6 @@ body {
 .event .event-right {
   flex: 1;
   padding: 20px;
-  border-radius: 5px;
   background-color: #fff; /* Fondo blanco */
 }
 
@@ -81,37 +79,15 @@ body {
 }
 
 .event .event-right .event-timing {
-  background: #218bbb;
-  color: #fff;
-  height: 37px;
-  width: 100px;
-  border-radius: 10px;
+  background: #218bbb; /* Fondo azul */
+  color: #fff; /* Texto blanco */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  padding: 8px 16px;
+  border-radius: 20px;
   font-size: 14px;
-  display: inline-block;
-  position: relative;
-  z-index: 1;
-  /* prevents padding from adding to the width */
-  box-sizing: border-box;
-}
-.event .event-right .event-timing div{
-  margin-top: -9px;
-  margin-left: 18px;
-}
-.event .event-right .event-timing:before {
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: 0%;
-  background: var(--primaryLight);
-  opacity: 1;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: width 0.3s;
-}
-.event .event-right .event-timing:hover:before {
-  width: 100%;
-  border-radius: 10px;
 }
 
 .event .event-right .event-timing img {
