--- a/version-actual/css/timetable.css
+++ b/version-actual/css/timetable.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family:  "Geist", sans-serif;
   background-image: url("../images/stock/vertical1.jpg");
   background-size: cover;
   background-position: center;
